--- a/README.yml
+++ b/README.yml
@@ -14,10 +14,10 @@ technologies:
 paper:
   - title: "big data and streaming"
     keyword: Streaming
-    url: https://github.com/cloudmesh-community/fa18-523-62/tree/master/paper
+    url: https://github.com/cloudmesh-community/fa18-523-62/blob/master/paper/paper.md
     group: fa18-523-62 fa18-523-69
 project:
   - title: "predicting EPL results based to tweets"
     keyword: Tweets
-    url: https://github.com/cloudmesh-community/fa18-523-62/tree/master/project-report
+    url: https://github.com/cloudmesh-community/fa18-523-62/blob/master/project-report/report.md
     group: fa18-523-62 fa18-523-69
